fix: Update CI workflow to use PHPUnit directly instead of Laravel test command
- Replace 'php artisan test --coverage --min=80' with direct PHPUnit calls
- Add test runner scripts for CI and local development
- Fix PHP version compatibility issues in CI
- Ensure proper coverage reporting for Codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,10 +51,11 @@ jobs:
       run: php artisan migrate --force
 
     - name: Run tests
-      run: php artisan test --coverage --min=80
+      run: bash run-tests.sh
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
+        flags: php
         fail_ci_if_error: false
