fix: Add missing factories, migrations, and fix test issues
- Add DepartmentFactory, EmployeeFactory, DesignationFactory, EmployeeTypeFactory
- Add migration for missing email, salary, hire_date columns in employees table
- Update Employee model fillable attributes
- Add HR Admin role to seeders
- Run seeders in CI workflow
- Fix syntax in EmployeeCreated notification
- Make validateHeaders method protected in EmployeeImportService
- Fix assertStringContains to assertStringContainsString for PHPUnit 9

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,9 @@ jobs:
     - name: Run database migrations
       run: php artisan migrate --force
 
+    - name: Run database seeders
+      run: php artisan db:seed --force
+
     - name: Run tests
       run: bash run-tests.sh
 
